syntax = "proto3";

package business_user.v1;

import "business/v1/business.proto";
import "user/v1/user.proto";

option go_package = "sabitou/proto/business_user/v1;businessUserV1";

service BusinessUserService {
  rpc CreateBusinessUser(CreateBusinessUserRequest) returns (CreateBusinessUserResponse);
  rpc GetBusinessUser(GetBusinessUserRequest) returns (GetBusinessUserResponse);
  rpc UpdateBusinessUser(UpdateBusinessUserRequest) returns (UpdateBusinessUserResponse);
  rpc DeleteBusinessUser(DeleteBusinessUserRequest) returns (DeleteBusinessUserResponse);
}

enum BusinessRole {
  UNSPECIFIED = 0;
  ADMIN = 1;
  MANAGER = 2;
  STAFF = 3;
}
message BusinessPermission {
  bool create_a_store = 1;
  bool view_member = 2;
  bool edit_business_information = 3;
  bool delete_business = 4;
}
message BusinessUser {
  string id = 1;
  string business_id = 2;
  string user_id = 3;
  bool active = 4;
  string role = 5;
  BusinessPermission business_permissions = 6;
  string created_at = 7;
  string updated_at = 8;
}

message CreateBusinessUserRequest {
  BusinessUser business_user = 1;
}

message CreateBusinessUserResponse {
  string id = 1;
}

message GetBusinessUserRequest {
  string id = 1;
}

message GetBusinessUserResponse {
  string id = 1;
  business.v1.Business business = 2;
  user.v1.User user = 3;
  bool active = 4;
  BusinessPermission business_permissions = 5;
  string created_at = 6;
  string updated_at = 7;
}

message UpdateBusinessUserRequest {
  BusinessUser business_user = 1;
}

message UpdateBusinessUserResponse {
  BusinessUser business_user = 1;
}

message DeleteBusinessUserRequest {
  string id = 1;
}

message DeleteBusinessUserResponse {
  bool success = 1;
}
